--- a/app/project/win/app.vcxproj
+++ b/app/project/win/app.vcxproj
@@ -30,7 +30,8 @@
     <ClCompile Include="..\..\..\lib\src\math\Vector3.cpp" />
     <ClCompile Include="..\..\..\lib\src\memory\ByteBuffer.cpp" />
     <ClCompile Include="..\..\..\lib\src\string\String.cpp" />
-    <ClCompile Include="..\..\bin\test.cpp" />
+    <ClCompile Include="..\..\bin\test.ps.cpp" />
+    <ClCompile Include="..\..\bin\test.vs.cpp" />
     <ClCompile Include="..\..\src\AppClear.cpp" />
     <ClCompile Include="..\..\src\AppShader.cpp" />
     <ClCompile Include="..\..\src\display\DisplayWindows.cpp" />
