--- a/lib/project/win/soft-gles2.vcxproj.filters
+++ b/lib/project/win/soft-gles2.vcxproj.filters
@@ -317,5 +317,11 @@
     <ClInclude Include="..\..\src\Debug.h">
       <Filter>src</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\GLFramebuffer.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\GLObject.h">
+      <Filter>src</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
