--- a/lib/project/win/soft-gles2.vcxproj
+++ b/lib/project/win/soft-gles2.vcxproj
@@ -77,6 +77,8 @@
     <ClInclude Include="..\..\src\container\Map.h" />
     <ClInclude Include="..\..\src\container\Vector.h" />
     <ClInclude Include="..\..\src\Debug.h" />
+    <ClInclude Include="..\..\src\GLFramebuffer.h" />
+    <ClInclude Include="..\..\src\GLObject.h" />
     <ClInclude Include="..\..\src\graphics\Image.h" />
     <ClInclude Include="..\..\src\io\Directory.h" />
     <ClInclude Include="..\..\src\io\File.h" />
