--- a/lib/project/win/soft-gles2.vcxproj
+++ b/lib/project/win/soft-gles2.vcxproj
@@ -79,6 +79,7 @@
     <ClInclude Include="..\..\src\Debug.h" />
     <ClInclude Include="..\..\src\GLFramebuffer.h" />
     <ClInclude Include="..\..\src\GLObject.h" />
+    <ClInclude Include="..\..\src\GLRenderbuffer.h" />
     <ClInclude Include="..\..\src\graphics\Image.h" />
     <ClInclude Include="..\..\src\io\Directory.h" />
     <ClInclude Include="..\..\src\io\File.h" />
