--- a/app/project/win/app.vcxproj.filters
+++ b/app/project/win/app.vcxproj.filters
@@ -54,13 +54,13 @@
     <ClCompile Include="..\..\..\lib\src\memory\ByteBuffer.cpp">
       <Filter>src\memory</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\bin\test.ps.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\bin\test.vs.cpp">
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\AppCube.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\bin\test.fs.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
