--- a/lib/project/win/soft-gles2.vcxproj.filters
+++ b/lib/project/win/soft-gles2.vcxproj.filters
@@ -338,5 +338,8 @@
     <ClInclude Include="..\..\src\GLShader.h">
       <Filter>src</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\GLProgram.h">
+      <Filter>src</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
