--- a/lib/project/win/soft-gles2.vcxproj
+++ b/lib/project/win/soft-gles2.vcxproj
@@ -20,8 +20,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\Debug.cpp" />
+    <ClCompile Include="..\..\src\exec_cmd.cpp" />
     <ClCompile Include="..\..\src\GLContext.cpp" />
     <ClCompile Include="..\..\src\GLFramebuffer.cpp" />
+    <ClCompile Include="..\..\src\GLProgram.cpp" />
     <ClCompile Include="..\..\src\GLShader.cpp" />
     <ClCompile Include="..\..\src\graphics\Image.cpp" />
     <ClCompile Include="..\..\src\io\Directory.cpp" />
@@ -79,6 +81,7 @@
     <ClInclude Include="..\..\src\container\Map.h" />
     <ClInclude Include="..\..\src\container\Vector.h" />
     <ClInclude Include="..\..\src\Debug.h" />
+    <ClInclude Include="..\..\src\exec_cmd.h" />
     <ClInclude Include="..\..\src\GLFramebuffer.h" />
     <ClInclude Include="..\..\src\GLObject.h" />
     <ClInclude Include="..\..\src\GLProgram.h" />
