--- a/lib/project/win/soft-gles2.vcxproj.filters
+++ b/lib/project/win/soft-gles2.vcxproj.filters
@@ -192,6 +192,9 @@
     <ClCompile Include="..\..\src\exec_cmd.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\GLBuffer.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\math\Bounds.h">
@@ -348,6 +351,9 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\exec_cmd.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\GLBuffer.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
