--- a/lib/project/win/soft-gles2.vcxproj.filters
+++ b/lib/project/win/soft-gles2.vcxproj.filters
@@ -195,6 +195,9 @@
     <ClCompile Include="..\..\src\GLBuffer.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\GLRasterizer.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\math\Bounds.h">
@@ -354,6 +357,9 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\GLBuffer.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\GLRasterizer.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
